Minimal cleanup of HazelcastTestSupport